@@ -1,3 +1,7 @@
+2004-09-28 Mikhail Khodjaiants
+	Synchronize the "getType" method of "CVariable.InternalVariable".
+	* CVariable.java
+ 
 2004-09-27 Mikhail Khodjaiants
 	Use the new "getValue" method of "IAddress" for address comparison.
 	* Disassembly.java
